# CppProjectTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  mainpage.md
src/: CMakeLists.txt
tests/: CMakeLists.txt
